--- a/Form.html
+++ b/Form.html
@@ -41,43 +41,12 @@
 
                 <div class="login-signup">
                    
-                        <a href="#" class="text signup-link">Register</a>
+                        <a href="register.html" class="text signup-link">Register</a>
                     </span>
                 </div>
             </div>
 
-            <!-- Registration Form -->
-            <div class="form signup">
-                <span class="title">Registration</span>
-<hr>
-                <form action="#">
-                    <div class="input-field">
-                        <input type="text" placeholder="Enter your name" required>
-                        <i class="uil uil-user"></i>
-                    </div>
-                    <div class="input-field">
-                        <input type="text" placeholder="Enter your email" required>
-                        <i class="uil uil-envelope icon"></i>
-                    </div>
-                    <div class="input-field">
-                        <input type="password" class="password" placeholder="Create a password" required>
-                        <i class="uil uil-lock icon"></i>
-                    </div>
-
-                    <div class="input-field button">
-                        <input type="button" value="Signup">
-                    </div>
-                </form>
-
-                <div class="login-signup">
-                    <span class="text">Already a member?
-                        <a href="#" class="text login-link">Login Now</a>
-                    </span>
-                </div>
-            </div>
-        </div>
-    </div>
-
+          
     <script src="form.js"></script>
 </body>
 </html>
