--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <a href="register.html">Register</a>
     </nav>
 <!-- Registration Form -->
-<div class="form signup">
+<!-- <div class="form signup">
     <span class="title">Registration</span>
 <hr>
     <form action="#">
@@ -67,7 +67,7 @@
     </div>
 </div>
 </div>
-</div>
+</div> -->
     <script src="script.js"></script>
 </body>
 
